--- a/app/company.html
+++ b/app/company.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Клубный дом «Крепостной 100»</title>
     <meta name="description" content="Современный комфортабельный жилой дом в центре Ростова">
-    <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css-->
     <!-- bower:css-->
@@ -19,47 +18,51 @@
     <!-- endbuild-->
   </head>
   <body class="company">
-    <header class="header">
-      <div class="wrapper"> <a href="./" class="logo"></a>
-        <nav class="main-nav">
-          <ul class="nav-ul">
-            <li class="nav-li"><a href="about">О доме</a></li>
-            <li class="nav-li"><a href="location">Расположение</a></li>
-            <li class="nav-li"><a href="layouts">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
-            <li class="nav-li"><a href="company" class="active">Застройщик</a></li>
-            <li class="nav-li nav-news"><a href="news">Новости</a></li>
-            <li class="nav-li"><a href="about#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <div class="wrapper">
-      <h1>ООО «НАШ ГОРОДЪ»</h1>
-    </div>
-    <div class="container company-about">
-      <div class="grid_3">
-        <div class="desc"> 
-          <p>Строительная компания ООО «НАШ ГОРОДЪ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.</p>
-          <p>Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.</p>
+    <div class="sticky-wrapper">
+      <header class="header">
+        <div class="wrapper"> <a href="./" class="logo"></a>
+          <nav class="main-nav">
+            <ul class="nav-ul">
+              <li class="nav-li"><a href="about">О доме</a></li>
+              <li class="nav-li"><a href="location">Расположение</a></li>
+              <li class="nav-li"><a href="layouts">Планировки</a></li>
+              <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+              <li class="nav-li"><a href="company" class="active">Застройщик</a></li>
+              <li class="nav-li nav-news"><a href="news">Новости</a></li>
+              <li class="nav-li"><a href="about#documents">Документы</a></li>
+              <li class="nav-li"><a href="contacts">Контакты</a></li>
+            </ul>
+          </nav>
         </div>
-      </div>
-      <div class="grid_1">
-        <div class="bank">
-          <div class="title">Реквизиты</div>
-          <div class="text">
-            <p>ООО «НАШ ГОРОДЪ»</p>
-            <p>ОГРН 1136195011215</p>
-            <p>ИНН 6167123434; КПП 616701001; </p>
-            <p>р/с 40702810300050000057</p>
-            <p>в Ростовском филиале ОАО «АктивКапитал Банк»</p>
-            <p>БИК 046029310</p>
-            <p>к/с 30101810300000000310 в РКЦ<br>г. Азов</p>
+      </header>
+      <div class="content-wrapper">
+        <div class="wrapper">
+          <h1>ООО «НАШ ГОРОДЪ»</h1>
+        </div>
+        <div class="container company-about">
+          <div class="grid_3">
+            <div class="desc"> 
+              <p>Строительная компания ООО «НАШ ГОРОДЪ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.</p>
+              <p>Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.</p>
+            </div>
           </div>
+          <div class="grid_1">
+            <div class="bank">
+              <div class="title">Реквизиты</div>
+              <div class="text">
+                <p>ООО «НАШ ГОРОДЪ»</p>
+                <p>ОГРН 1136195011215</p>
+                <p>ИНН 6167123434; КПП 616701001; </p>
+                <p>р/с 40702810300050000057</p>
+                <p>в Ростовском филиале ОАО «АктивКапитал Банк»</p>
+                <p>БИК 046029310</p>
+                <p>к/с 30101810300000000310 в РКЦ<br>г. Азов</p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
         </div>
       </div>
-      <div class="clearfix"></div>
     </div>
     <footer class="footer">
       <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
