--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Клубный дом «Крепостной 100»</title>
     <meta name="description" content="Современный комфортабельный жилой дом в центре Ростова">
-    <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css-->
     <!-- bower:css-->
@@ -19,34 +18,38 @@
     <!-- endbuild-->
   </head>
   <body class="index">
-    <header class="header main-header">
-      <div class="wrapper"> <a href="./" class="logo"></a>
-        <nav class="main-nav">
-          <ul class="nav-ul">
-            <li class="nav-li"><a href="about">О доме</a></li>
-            <li class="nav-li"><a href="location">Расположение</a></li>
-            <li class="nav-li"><a href="layouts">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
-            <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li nav-news"><a href="news">Новости</a></li>
-            <li class="nav-li"><a href="about#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <div class="index-block">
-      <div class="slider">
-        <div class="js-indexFotorama"><img alt="" src="images/index/1.jpg"><img alt="" src="images/index/2.jpg"><img alt="" src="images/index/3.jpg"><img alt="" src="images/index/4.jpg"><img alt="" src="images/index/5.jpg"><img alt="" src="images/index/6.jpg"><img alt="" src="images/index/7.jpg"><img alt="" src="images/index/8.jpg">
+    <div class="sticky-wrapper">
+      <header class="header main-header">
+        <div class="wrapper"> <a href="./" class="logo"></a>
+          <nav class="main-nav">
+            <ul class="nav-ul">
+              <li class="nav-li"><a href="about">О доме</a></li>
+              <li class="nav-li"><a href="location">Расположение</a></li>
+              <li class="nav-li"><a href="layouts">Планировки</a></li>
+              <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+              <li class="nav-li"><a href="company">Застройщик</a></li>
+              <li class="nav-li nav-news"><a href="news">Новости</a></li>
+              <li class="nav-li"><a href="about#documents">Документы</a></li>
+              <li class="nav-li"><a href="contacts">Контакты</a></li>
+            </ul>
+          </nav>
         </div>
-      </div>
-      <div class="title">
-        <div class="wrapper">
-          <div class="main-text">Современный<br>Комфортабельный жилой дом<br>В центре Ростова-на-Дону<br></div>
-          <div class="subs">
-            <div class="subs-cont">
-              <div class="sub-text"><span class="date">20.11.2014</span><br><a href="news" class="text">Проданы 2 квартиры</a></div>
-              <div class="sub-text"><a href="about#documents" class="icon-link"><i class="icon icon-file"></i> Правовая документация</a></div>
+      </header>
+      <div class="content-wrapper">
+        <div class="index-block">
+          <div class="slider">
+            <div class="js-indexFotorama"><img alt="" src="images/index/1.jpg"><img alt="" src="images/index/2.jpg"><img alt="" src="images/index/3.jpg"><img alt="" src="images/index/4.jpg"><img alt="" src="images/index/5.jpg"><img alt="" src="images/index/6.jpg"><img alt="" src="images/index/7.jpg"><img alt="" src="images/index/8.jpg">
+            </div>
+          </div>
+          <div class="title">
+            <div class="wrapper">
+              <div class="main-text">Современный<br>Комфортабельный жилой дом<br>В центре Ростова-на-Дону<br></div>
+              <div class="subs">
+                <div class="subs-cont">
+                  <div class="sub-text"><span class="date">20.11.2014</span><br><a href="news" class="text">Проданы 2 квартиры</a></div>
+                  <div class="sub-text"><a href="about#documents" class="icon-link"><i class="icon icon-file"></i> Правовая документация</a></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
