--- a/app/mortgage.html
+++ b/app/mortgage.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Клубный дом «Крепостной 100»</title>
     <meta name="description" content="Современный комфортабельный жилой дом в центре Ростова">
-    <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css-->
     <!-- bower:css-->
@@ -19,65 +18,69 @@
     <!-- endbuild-->
   </head>
   <body class="mortgage">
-    <header class="header">
-      <div class="wrapper"> <a href="./" class="logo"></a>
-        <nav class="main-nav">
-          <ul class="nav-ul">
-            <li class="nav-li"><a href="about">О доме</a></li>
-            <li class="nav-li"><a href="location">Расположение</a></li>
-            <li class="nav-li"><a href="layouts">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage" class="active">Ипотека</a></li>
-            <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li nav-news"><a href="news">Новости</a></li>
-            <li class="nav-li"><a href="about#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <div class="wrapper">
-      <h1>Ипотека</h1>
-    </div>
-    <div class="mortgage">
-      <div class="container">
-        <div class="grid_2 desc">Наши банки-партнеры помогут вам осуществить свою мечту и сделать вашу жизнь более комфортной уже сейчас. Вы можете ознакомиться с представленными ниже предложениями по ипотеке и выбрать наиболее удобное и подходящее для вас финансовое решение. Генеральный партнер – банк «Центр-Инвест».</div>
-        <div class="clearfix"></div>
-      </div>
-      <div class="wrapper">
-        <div class="mortgage-accordion js-accordion">
-          <div class="title m-centrinvest"></div>
-          <div class="mortgage-table">
-            <table>
-              <tr>
-                <td>Первоначальный взнос</td>
-                <td>от 10%</td>
-              </tr>
-              <tr>
-                <td>Срок кредита</td>
-                <td>до 20 лет</td>
-              </tr>
-              <tr>
-                <td>Процентная ставка в рублях</td>
-                <td>от 9,5% до 13,25% (зависит от размера первоначального взноса и срока кредита)</td>
-              </tr>
-              <tr>
-                <td>Информация о предложении</td>
-                <td>
-                  <div class="m-table-blocks">
-                    <div class="m-table-block">
-                      <p>Стандартные условия ипотеки «Жилая недвижимость»</p>
-                      <ul class="us-list">
-                        <li>возможно полное досрочное или частичное погашение без штрафных санкций;
-                        <li>погашение кредита аннуитетными платежами;
-                        <li>оформление страховки не обязательно;
-                        <li>обеспечение кредита –  залог приобретаемой недвижимости (при необходимости поручительство физических или юридических лиц).
-                      </ul>
-                    </div>
-                  </div>
-                  <p>С подробной информацией о порядке получения кредита вы можете ознакомиться на сайте «Центр-инвеста»   <a href="https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost">https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost</a></p>
-                </td>
-              </tr>
-            </table>
+    <div class="sticky-wrapper">
+      <header class="header">
+        <div class="wrapper"> <a href="./" class="logo"></a>
+          <nav class="main-nav">
+            <ul class="nav-ul">
+              <li class="nav-li"><a href="about">О доме</a></li>
+              <li class="nav-li"><a href="location">Расположение</a></li>
+              <li class="nav-li"><a href="layouts">Планировки</a></li>
+              <li class="nav-li"><a href="mortgage" class="active">Ипотека</a></li>
+              <li class="nav-li"><a href="company">Застройщик</a></li>
+              <li class="nav-li nav-news"><a href="news">Новости</a></li>
+              <li class="nav-li"><a href="about#documents">Документы</a></li>
+              <li class="nav-li"><a href="contacts">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="content-wrapper">
+        <div class="wrapper">
+          <h1>Ипотека</h1>
+        </div>
+        <div class="mortgage">
+          <div class="container">
+            <div class="grid_2 desc">Наши банки-партнеры помогут вам осуществить свою мечту и сделать вашу жизнь более комфортной уже сейчас. Вы можете ознакомиться с представленными ниже предложениями по ипотеке и выбрать наиболее удобное и подходящее для вас финансовое решение. Генеральный партнер – банк «Центр-Инвест».</div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="wrapper">
+            <div class="mortgage-accordion js-accordion">
+              <div class="title m-centrinvest"></div>
+              <div class="mortgage-table">
+                <table>
+                  <tr>
+                    <td>Первоначальный взнос</td>
+                    <td>от 10%</td>
+                  </tr>
+                  <tr>
+                    <td>Срок кредита</td>
+                    <td>до 20 лет</td>
+                  </tr>
+                  <tr>
+                    <td>Процентная ставка в рублях</td>
+                    <td>от 9,5% до 13,25% (зависит от размера первоначального взноса и срока кредита)</td>
+                  </tr>
+                  <tr>
+                    <td>Информация о предложении</td>
+                    <td>
+                      <div class="m-table-blocks">
+                        <div class="m-table-block">
+                          <p>Стандартные условия ипотеки «Жилая недвижимость»</p>
+                          <ul class="us-list">
+                            <li>возможно полное досрочное или частичное погашение без штрафных санкций;
+                            <li>погашение кредита аннуитетными платежами;
+                            <li>оформление страховки не обязательно;
+                            <li>обеспечение кредита –  залог приобретаемой недвижимости (при необходимости поручительство физических или юридических лиц).
+                          </ul>
+                        </div>
+                      </div>
+                      <p>С подробной информацией о порядке получения кредита вы можете ознакомиться на сайте «Центр-инвеста»   <a href="https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost">https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost</a></p>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
           </div>
         </div>
       </div>
