--- a/app/news.html
+++ b/app/news.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Клубный дом «Крепостной 100»</title>
     <meta name="description" content="Современный комфортабельный жилой дом в центре Ростова">
-    <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css-->
     <!-- bower:css-->
@@ -19,41 +18,45 @@
     <!-- endbuild-->
   </head>
   <body class="news">
-    <header class="header">
-      <div class="wrapper"> <a href="./" class="logo"></a>
-        <nav class="main-nav">
-          <ul class="nav-ul">
-            <li class="nav-li"><a href="about">О доме</a></li>
-            <li class="nav-li"><a href="location">Расположение</a></li>
-            <li class="nav-li"><a href="layouts">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
-            <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li nav-news"><a href="news" class="active">Новости</a></li>
-            <li class="nav-li"><a href="about#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts">Контакты</a></li>
-          </ul>
-        </nav>
+    <div class="sticky-wrapper">
+      <header class="header">
+        <div class="wrapper"> <a href="./" class="logo"></a>
+          <nav class="main-nav">
+            <ul class="nav-ul">
+              <li class="nav-li"><a href="about">О доме</a></li>
+              <li class="nav-li"><a href="location">Расположение</a></li>
+              <li class="nav-li"><a href="layouts">Планировки</a></li>
+              <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+              <li class="nav-li"><a href="company">Застройщик</a></li>
+              <li class="nav-li nav-news"><a href="news" class="active">Новости</a></li>
+              <li class="nav-li"><a href="about#documents">Документы</a></li>
+              <li class="nav-li"><a href="contacts">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="content-wrapper">
+        <div class="wrapper">
+          <h1>Новости</h1>
+        </div>
+        <ul class="news-ul">
+          <li class="news-li">
+            <div class="news-info">
+              <div class="date">20 ноября 2014</div>
+              <div class="title">Проданы 2 квартиры</div>
+              <div class="text">На текущем этапе строительства дома можно купить квартиру по самой выгодной цене. Поторопитесь, чем выше становится «Крепостной, 100», тем выше стоимость квадратного метра. Строительство ведется при финансовой поддержке банков партнеров «Сбербанка», «ВТБ24» и «Центр-Инвест», что гарантирует надежность ваших вложений.</div>
+            </div>
+          </li>
+          <li class="news-li">
+            <div class="news-info">
+              <div class="date">18 сентября 2014</div>
+              <div class="title">Получено разрешение на строительство</div>
+              <div class="text">Департамент архитектуры и градостроительства города Ростова-на-Дону выдал разрешение на строительство дома.</div>
+            </div>
+          </li>
+        </ul>
       </div>
-    </header>
-    <div class="wrapper">
-      <h1>Новости</h1>
     </div>
-    <ul class="news-ul">
-      <li class="news-li">
-        <div class="news-info">
-          <div class="date">20 ноября 2014</div>
-          <div class="title">Проданы 2 квартиры</div>
-          <div class="text">На текущем этапе строительства дома можно купить квартиру по самой выгодной цене. Поторопитесь, чем выше становится «Крепостной, 100», тем выше стоимость квадратного метра. Строительство ведется при финансовой поддержке банков партнеров «Сбербанка», «ВТБ24» и «Центр-Инвест», что гарантирует надежность ваших вложений.</div>
-        </div>
-      </li>
-      <li class="news-li">
-        <div class="news-info">
-          <div class="date">18 сентября 2014</div>
-          <div class="title">Получено разрешение на строительство</div>
-          <div class="text">Департамент архитектуры и градостроительства города Ростова-на-Дону выдал разрешение на строительство дома.</div>
-        </div>
-      </li>
-    </ul>
     <footer class="footer">
       <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
