--- a/app/location.html
+++ b/app/location.html
@@ -23,14 +23,14 @@
         <div class="wrapper"> <a href="./" class="logo"></a>
           <nav class="main-nav">
             <ul class="nav-ul">
-              <li class="nav-li"><a href="about.html">О доме</a></li>
-              <li class="nav-li"><a href="location.html" class="active">Расположение</a></li>
-              <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-              <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-              <li class="nav-li"><a href="company.html">Застройщик</a></li>
-              <li class="nav-li nav-news"><a href="news.html">Новости</a></li>
-              <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-              <li class="nav-li"><a href="contacts.html">Контакты</a></li>
+              <li class="nav-li"><a href="about">О доме</a></li>
+              <li class="nav-li"><a href="location" class="active">Расположение</a></li>
+              <li class="nav-li"><a href="layouts">Планировки</a></li>
+              <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+              <li class="nav-li"><a href="company">Застройщик</a></li>
+              <li class="nav-li nav-news"><a href="news">Новости</a></li>
+              <li class="nav-li"><a href="about#documents">Документы</a></li>
+              <li class="nav-li"><a href="contacts">Контакты</a></li>
             </ul>
           </nav>
         </div>
